--- a/resources/css/layuimini.css
+++ b/resources/css/layuimini.css
@@ -44,16 +44,23 @@
 /**tab选项卡 */
 .layui-tab-title li cite {font-style:normal;padding-left:5px;}
 #top_tabs_box>.layui-tab-title {color:#acafb1;}
-#top_tabs_box>.layui-tab-title li:hover {color:#000000;background-color:#e7ebed;}
+#top_tabs_box>.layui-tab-title li:hover {color:#2D8CF0;background-color:#e7ebed;}
 #top_tabs_box .layui-tab-close {font-size:12px!important;width:14px!important;height:14px!important;line-height:16px!important;}
 #top_tabs_box .layui-tab-close:hover {border-radius:4em;background:#ff5722;}
-#top_tabs_box>.layui-tab-title>.layui-this>i:first-child {color:#009688;}
-#top_tabs_box>.layui-tab-title li {border-right:1px solid #e2e2e2;font-size: 12.5px!important;}
-#top_tabs_box>.layui-tab-title .layui-this {color:#000000;}
-#top_tabs_box>.layui-tab-title .layui-this:after {margin-top:33px;width: 100%;border: none;height: 2px;background-color: #243346;}
-#top_tabs_box {padding-right:138px;height:34px;border-bottom:1px solid #e2e2e2;}
-#top_tabs_box > .layui-tab-title ,#top_tabs_box > .closeBox {height:35px !important;}
-#top_tabs_box > .layui-tab-title > li ,#top_tabs_box > .closeBox > li {line-height:35px !important;}
+#top_tabs_box>.layui-tab-title>.layui-this>i:first-child {color:#2D8CF0;}
+#top_tabs_box>.layui-tab-title li {font-size: 12.5px!important;}
+#top_tabs_box>.layui-tab-title .layui-this {color:#2D8CF0;background: #e7ebed !important;}
+#top_tabs_box>.layui-tab-title .layui-this:after {margin-top:-13px;width: 100%;border: none !important;}
+#top_tabs_box {padding-right:138px;height:34px;}
+#top_tabs_box > .layui-tab-title ,#top_tabs_box > .closeBox {margin-left: 10px;height:35px !important;}
+#top_tabs_box > .layui-tab-title > li ,#top_tabs_box > .closeBox > li {
+    height: 32px;
+    line-height: 32px !important;
+    background: #fff;
+    border-radius: 3px;
+    margin-right: 15px;
+    margin-top: 5px;
+}
 #top_tabs {position:absolute;border-bottom:none;}
 
 /**多窗口页面操作下拉**/
@@ -111,7 +118,7 @@
 .layui-nav .layui-this:after,.layui-nav-bar,.layui-nav-tree .layui-nav-itemed:after {width:0 !important;height:0 !important;}
 .layui-layout-admin .layui-side {top:60px !important;}
 .layui-tab-card {box-shadow:0px 0px 0px #888888;border-bottom:0;}
-.clildFrame.layui-tab-content {top:35px;position:absolute;bottom:0px;width:100%;padding:0;}
+.clildFrame.layui-tab-content {top:45px;position:absolute;bottom:0px;width:100%;padding:0;}
 * {touch-action:pan-y;}
 
 /*打开页面动画*/
@@ -144,7 +151,7 @@
  手机自适应样式
 */
 @media screen and (max-width:768px) {
-    #top_tabs_box {border-bottom:0px!important;}
+    #top_tabs_box {background: #F5F7F9 !important;border-bottom:0px !important;}
     .layui-layout-admin .layui-body .layui-tab-item.layui-show{border-top:1px solid #e2e2e2;}
     .layuimini-mini .layuimini-tool {left:15px !important;}
     .layuimini-tool i:hover {background-color:transparent!important;}
