--- a/resources/css/layuimini.css
+++ b/resources/css/layuimini.css
@@ -39,7 +39,7 @@
 .layuimini-tool {position:absolute!important;top:0;left:235px;width:60px;height:100%;line-height:60px;text-align:center;color:#ffffff!important;transition:all .2s;}
 /**缩放工具（缩放） */
 .layuimini-mini .layuimini-tool {left:95px!important;}
-.layuimini-tool i {display:block;color:#fff;width:32px;height:32px;line-height:32px;border-radius:3px;text-align:center;margin-top:15px;cursor:pointer;}
+.layuimini-tool i {display:block;color:#000;width:32px;height:32px;line-height:32px;border-radius:3px;text-align:center;margin-top:15px;cursor:pointer;}
 
 /**tab选项卡 */
 #top_tabs_box{
@@ -1091,4 +1091,10 @@
     padding-right: 10px !important;
     margin-right: 15px;
     box-sizing: border-box;
+}
+.layui-nav-item>a{
+    color: #000 !important;
+}
+.layui-nav-tree .layui-nav-item a{
+    color: #fff !important;
 }
