--- a/resources/css/layuimini.css
+++ b/resources/css/layuimini.css
@@ -106,7 +106,7 @@
 .layuimini-mini .layui-left-menu {width: 80px !important;}
 .layuimini-mini .layui-side.layui-bg-black,.layuimini-mini .layui-left-menu>ul ,.layuimini-mini .layui-left-menu>ul li i {width:60px!important;}
 .layuimini-mini .layui-left-menu>ul li span:first-child {display:none;}
-.layuimini-mini .layui-left-menu>ul li span:last-child {float:right; right: 7px;}
+.layuimini-mini .layui-left-menu>ul li span:last-child {float:right; right: 7px;display: none;}
 .layuimini-mini .layui-left-menu .layui-nav .layui-nav-item a {height:40px;line-height:40px;padding-right:0px!important;}
 
 /**内容主体（通用） */
