--- a/resources/lib/bootstarp/css/bootstrap.css
+++ b/resources/lib/bootstarp/css/bootstrap.css
@@ -2496,7 +2496,7 @@ fieldset {
 }
 legend {
   display: block;
-  width: 100%;
+  /*width: 100%;*/
   padding: 0;
   margin-bottom: 20px;
   font-size: 21px;
