--- a/resources/lib/bootstarp/css/bootstrap.css
+++ b/resources/lib/bootstarp/css/bootstrap.css
@@ -2503,7 +2503,7 @@ legend {
   line-height: inherit;
   color: #333;
   border: 0;
-  border-bottom: 1px solid #e5e5e5;
+/*  border-bottom: 1px solid #e5e5e5;*/
 }
 label {
   display: inline-block;
